# MSU-MPI-CUDA-workshop

./: CMakeLists.txt  README.md
src/: mpi_cuda.cu
